--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField('String', 'MOVIE_API_VALUE', "\"1145da0e2b8ed62cc65952c57fe9c603\"")
+    }
+}
+repositories {
+
+    mavenCentral()
+
 }
 
 dependencies {
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -30,6 +40,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:support-vector-drawable:25.1.0'
     compile 'com.android.support:percent:25.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+ 
     testCompile 'junit:junit:4.12'
 }
